# tasky

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tasky.sh
Formula/: tasky.rb
tasky/: __main__.py  app.py  config.py
tasky/collectors/: base.py  cpu.py  fans.py  gpu.py  network.py
tasky/ui/: colors.py  googly_eyes.py  graphs.py  views.py
